# awg-veil

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  Проект консольного клиента и библиотеки Python для AmneziaWG 2.0.md
.github/workflows/: ci.yml
docs/: configuration.md
examples/: awg0.conf.example
src/awg_veil/: __init__.py
src/awg_veil/cli/: __init__.py  main.py
src/awg_veil/config/: __init__.py  models.py  parser.py  validator.py
src/awg_veil/obfuscation/: __init__.py  cps.py  generator.py  profiles.py
src/awg_veil/secrets/: __init__.py  keys.py
src/awg_veil/tunnel/: __init__.py  base.py  linux.py  manager.py  mock.py
tests/: conftest.py
tests/fixtures/: amneziawg_section.conf  invalid_overlap.conf  native.conf
tests/integration/: test_cli.py  test_tunnel_mock.py
tests/unit/: test_linux_backend.py  test_obfuscation.py  test_parser.py  test_secrets.py  test_tunnel_manager.py  test_validator.py
